added quiz game

--- a/home.html
+++ b/home.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-   
-    <style>
-        body {
-            background-color: blueviolet;
-            color: white;
-        }
-    </style>
-    <script>
-        
-    </script>
+    <title>Quiz Game</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
+
 <body>
-    <h1>Home</h1>
-    <h2><a href="https://mellinaezzahir.github.io/simplewebsites/gradient/gradient" target="_blank">gradient</a></h2><br/>
-    <h2><a href="https://mellinaezzahir.github.io/simplewebsites/countdown/countdown" target="_blank">countdown</a></h2><br/>
-    <h2><a href="https://mellinaezzahir.github.io/simplewebsites/quotegenerator/quotegenerator" target="_blank">quotegenerator</a></h2>
+    <h1>-- Quiz Game --</h1>
+    <div class="container">
+        <div class="link-block">
+            <a target="_blank" href="flag-quiz.html">
+                Flag quiz
+            </a>
+        </div>
+    </div>
 </body>
+
 </html>
